# jhon-mo-ia-apifast-python

./: README.md  main.py  pyproject.toml  requirements.txt
app/: __init__.py  main.py  ml_logic.py  models.py  utils.py
ml/: cost_model.pkl  train_model.py
